--- a/angular.json
+++ b/angular.json
@@ -100,6 +100,7 @@
   },
   "defaultProject": "concesionario",
   "cli": {
+    "analytics": false,
     "cache": {
       "enabled": true,
       "path": "./target/angular/",
